adding animation css

--- a/style.css
+++ b/style.css
@@ -80,3 +80,14 @@ header {
 .home-img img {
   animation: animate 3s linear infinite;
 }
+@keyframes animate {
+  0% {
+    transform: translate(-11px, 0);
+  }
+  50% {
+    transform: translate(-0px, -11px);
+  }
+  100% {
+    transform: translate(-11px, 0);
+  }
+}
