styling the shop

--- a/style.css
+++ b/style.css
@@ -59,6 +59,13 @@ header {
   color: var(--main-color);
 }
 
+#menu-icon {
+  font-size: 24px;
+  cursor: pointer;
+  z-index: 1001;
+  display: none;
+}
+
 .home {
   width: 100%;
   min-height: 100vh;
@@ -80,6 +87,7 @@ header {
 .home-img img {
   animation: animate 3s linear infinite;
 }
+
 @keyframes animate {
   0% {
     transform: translate(-11px, 0);
@@ -90,4 +98,82 @@ header {
   100% {
     transform: translate(-11px, 0);
   }
+}
+
+.heading {
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.heading span {
+  font-size: 1rem;
+  font-weight: 600;
+  color: var(--second-color);
+}
+
+.heading h1 {
+  font-size: 2rem;
+  color: var(--main-color);
+}
+
+.shop-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  margin-top: 5rem;
+}
+
+.shop-container .box {
+  flex: 1 1 10rem;
+  background: var(--main-color);
+  padding: 20px;
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 3rem;
+  border-radius: 0.5rem;
+}
+
+.shop-container .box .box-img {
+  width: 150px;
+  height: 150px;
+  margin-top: -100px;
+}
+
+.shop-container .box .box-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  object-position: center;
+}
+
+.stars {
+  margin: 1rem 0 0.1rem;
+}
+
+.shop-container .box .stars .bx {
+  color: #ebdbc8;
+}
+
+.shop-container .box h2 {
+  color: #ebdbc8;
+  font-size: 1.2rem;
+}
+
+.shop-container .box span {
+  color: #ebdbc8;
+  font-size: 1.4rem;
+  font-weight: 500;
+  margin: 0.2rem 0 0.5rem;
+}
+
+.box .btn {
+  border: 2px solid #ebdbc8;
+  color: #ebdbc8;
+}
+
+.box .btn:hover {
+  background: #ebdbc8;
+  color: var(--second-color);
 }
