styling about page

--- a/style.css
+++ b/style.css
@@ -239,3 +239,26 @@ header {
   margin: 0.5rem 0 1rem;
   text-align: justify;
 }
+
+.about {
+  display: flex;
+  flex-wrap: wrap;
+  background: #ebdbc8;
+  gap: 1.5rem;
+}
+
+.about-img {
+  flex: 1 1 17rem;
+}
+.about-text {
+  flex: 1 1 17rem;
+}
+
+.about-text h2 {
+  font-size: 1.2rem;
+  color: var(--second-color);
+}
+.about-text p {
+  margin: 0.5rem 0 1rem;
+  text-align: justify;
+}
