--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
   scroll-behavior: smooth;
 }
 :root {
-  --main-color: yellow;
+  --main-color: rgb(250, 204, 21);
   --second-color: #1e3932;
 }
 
@@ -39,8 +39,11 @@ header {
   align-items: center;
 }
 
-.logo img {
-  width: 40px;
+.logo p {
+  color: black;
+  font-size: 24px;
+  font-family: "Arial", sans-serif;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
 }
 
 .navbar {
@@ -72,7 +75,6 @@ header {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
-  background: #ebdbc8;
   gap: 1rem;
 }
 
@@ -84,20 +86,22 @@ header {
   flex: 1 1 17rem;
 }
 
-.home-img img {
-  animation: animate 3s linear infinite;
+.home-img {
+  align-items: center;
+  justify-content: center;
+  width: 266px;
+  background-color: rgb(250, 204, 21);
+  border-radius: 9999px;
+  display: flex;
 }
 
-@keyframes animate {
-  0% {
-    transform: translate(-11px, 0);
-  }
-  50% {
-    transform: translate(-0px, -11px);
-  }
-  100% {
-    transform: translate(-11px, 0);
-  }
+.home-img img {
+  width: 208px;
+  height: 208px;
+  object-cover: fit;
+  border-radius: 9999px;
+  border-width: 8px;
+  border-color: white;
 }
 
 .home-text span {
