Editing the navbar hover and click style

--- a/style.css
+++ b/style.css
@@ -52,18 +52,46 @@ header {
 
 .navbar {
   display: flex;
+  background-color: #fff;
+  border-bottom: 2px solid transparent;
+  transition: border-bottom-color 0.3s ease;
 }
-
 .navbar a {
   font-size: 1rem;
   padding: 11px 20px;
   color: var(--second-color);
   font-weight: 600;
   text-transform: uppercase;
+  text-decoration: none;
+  position: relative;
 }
 
-.navbar a:hover {
-  color: var(--main-color);
+.navbar a::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  width: 0%;
+  height: 2px;
+  background-color: var(--main-color);
+  transition: width 0.3s ease, left 0.3s ease;
+}
+
+.navbar a:hover::before,
+.navbar a:focus::before {
+  width: 100%;
+  left: 0;
+}
+
+.navbar a.active::before {
+  width: 100%;
+  left: 0;
+}
+
+.navbar a:hover,
+.navbar a:focus,
+.navbar a.active {
+  color: var(--main-color); /* Change text color on hover/focus */
 }
 
 #menu-icon {
@@ -158,7 +186,7 @@ header {
   display: flex;
   flex-wrap: wrap;
   gap: 1rem;
-  margin-top: 5rem;
+  margin-top: 0.5rem;
 }
 
 .shop-container .box {
